--- a/credentials.yml
+++ b/credentials.yml
@@ -6,9 +6,9 @@ rest:
 #  # you don't need to provide anything here - this channel doesn't
 #  # require any credentials
 telegram:
-    access_token: "6572167077:AAHN4RsbnKhDtFy5UmJuP_h4jkIk-AycDUM"
+    access_token: "token"
     verify: "lr12_clothes_bot"
-    webhook_url: "https://22fe-2a03-d000-4322-8cd4-a95e-32ab-17f1-826a.ngrok.io/webhooks/telegram/webhook"
+    webhook_url: "https://link.ngrok.io/webhooks/telegram/webhook"
 
 #facebook:
 #  verify: "<verify>"
